# SimpleXray

./: .gitignore  .gitmodules  ALL_STAGES_COMPLETE.md  ALL_STEPS_COMPLETE.md  ALL_STEPS_COMPLETED.md  ANNOTATION_AUDIT_SUMMARY.md  APPLY_INSTRUCTIONS.md  AUDIT_FINAL_SUMMARY.md  BORINGSSL_FULL_INTEGRATION_TODO.md  BORINGSSL_IMPLEMENTATION_COMPLETE.md  BORINGSSL_INTEGRATION_COMPLETE.md  BORINGSSL_MIGRATION_SUMMARY.md  BORINGSSL_PATCH_SUMMARY.md  BUG_REPORT.md  CHAIN_FEATURE_COMPLETE.md  CHAIN_IMPLEMENTATION_STATUS.md  COMPLETION_CHECKLIST.md  CREATE_TEST_PR.md  FINAL_COMPLETION_REPORT.md  INTEGRATION_SUMMARY.md  LOG_ANALYSIS_AND_FIXES.md  LOG_ANALYSIS_REPORT.md  MIGRATION.md  NEXT_STEPS_BORINGSSL.md  NEXT_STEPS_WORKFLOW.md  NEXT_STEP_ACTION_PLAN.md  OPENSSL_IMPLEMENTATION_COMPLETE.md  OPENSSL_INTEGRATION_ROADMAP.md  OPENSSL_SETUP_INSTRUCTIONS.md  OPEN_PR_IN_BROWSER.md  PR_FINAL_TEMPLATE.md  PR_OLUSTUR.md  PR_READY_CHECKLIST.md  PR_READY_TO_CREATE.md  PR_READY_TO_SUBMIT.txt  QUICHE_BUILD.md  QUICK_FIX_OPENSSL_HEADERS.md  QUICK_START_BORINGSSL.md  README.md  README_AI_FIXER.md  (+16 more)
.claude/: settings.local.json
.cursor/ai_learning/: README.md  fix_history.json  knowledge.md  ml_patterns.json  patterns.json
.github/workflows/: ai-auto-fix.yml  android-hy2-reality-pepper.yml  auto-bump-version.yml  auto-release.yml  auto-update-xray-core.yml  auto-version-release.yml  boringssl-build.yml  build-hysteria2.yml  build-quiche.yml  build-xray-boringssl.yml  build.yml  rust-build.yml  test-boringssl-patches.yml  test-release.yml
agents/: self_build_fixer.mdc
app/: build.gradle  google-services.json.template  multidex-config.pro  proguard-rules-perf.pro  proguard-rules.pro
app/src/androidTest/kotlin/com/simplexray/an/chain/: ChainIntegrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/simplexray/an/service/: IVpnServiceBinder.aidl
app/src/main/assets/: template
app/src/main/jni/: Application.mk  build-rust.bat  build-rust.sh
app/src/main/jni/pepper-shaper/: Android.mk  Cargo.toml
app/src/main/jni/pepper-shaper/include/: pepper_pacing.h  pepper_queue.h
app/src/main/jni/pepper-shaper/src/: lib.rs  pacing.rs  pepper_jni.cpp  pepper_pacing.cpp  pepper_queue.cpp  queue.rs
app/src/main/jni/perf-net/: Android.mk  Application.mk  CMakeLists.txt  Cargo.toml  TODO_REMAINING.md  init_boringssl.sh
app/src/main/jni/perf-net/include/: perf_common.h
app/src/main/jni/perf-net/src/: boringssl_bridge.cpp  cert_verifier.rs  connection_pool.rs  cpu_affinity.rs  crypto_accel.rs  crypto_adapter.cpp  crypto_adapter.h  epoll_loop.rs  jit_warmup.rs  jni_bridge.rs  kernel_pacing.rs  lib.rs  mmap_batch.rs  mtu_tuning.rs  perf_cert_verifier.cpp  perf_connection_pool.cpp  perf_crypto_boringssl.cpp  perf_crypto_neon.cpp  perf_epoll_loop.cpp  perf_jni.cpp  perf_memcpy_helper.h  perf_mtu_tuning.cpp  perf_openssl_detect.cpp  perf_quic_handshake.cpp  perf_tls_evasion.cpp  perf_tls_handshake.cpp  perf_tls_keylog.cpp  perf_tls_session.cpp  perf_zero_copy.cpp  qos.rs  quic_handshake.rs  quic_optimizer.rs  readahead.rs  ring_buffer.rs  tcp_fastopen.rs  tls_evasion.rs  tls_handshake.rs  tls_keylog.rs  tls_session.rs  zero_copy.rs
app/src/main/jni/perf-net/src/hyper/: hyper_burst.hpp  hyper_crypto.cpp  hyper_ring.cpp
app/src/main/jni/quiche-client/: Android.mk  CMakeLists.txt  Cargo.toml  README.md  build-quiche-android.sh
app/src/main/jni/quiche-client/include/: quiche_client.h  quiche_crypto.h  quiche_tun_forwarder.h  quiche_utils.h
app/src/main/jni/quiche-client/src/: client.rs  crypto.rs  jni_bridge.rs  lib.rs  quiche_client.cpp  quiche_crypto.cpp  quiche_jni.cpp  quiche_tun_forwarder.cpp  quiche_utils.cpp  tun_forwarder.rs  utils.rs
app/src/main/jni/xray-signal-handler/: Android.mk  Cargo.toml
app/src/main/jni/xray-signal-handler/src/: lib.rs  xray_signal_handler.cpp
app/src/main/kotlin/com/simplexray/an/: App.kt
app/src/main/kotlin/com/simplexray/an/activity/: MainActivity.kt
app/src/main/kotlin/com/simplexray/an/chain/: README.md
app/src/main/res/values/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: network_security_config.xml
crypto_wrapper/: Android.mk  crypto.cpp  crypto.h
docs/: OPENSSL.md  boringssl-integration.md  boringssl-setup.md  rust-migration-plan.md
experimental/: fingerprint_harness.cpp  fingerprint_interface.h
scripts/: README-MONITORING.md  activate-ai-fixer-v2.sh  activate-ai-fixer-v3-multi.sh  activate-ai-fixer-v3.sh  activate-ai-fixer.sh  ai-build-fixer-v2.sh  ai-build-fixer-v3-multi.sh  ai-build-fixer-v3.1.sh  ai-build-fixer-v3.sh  ai-build-fixer.sh  ai-fix-on-failure.sh  ai-fix-until-success.sh  ai-fixer-supervisor.sh  ai-monitor-until-success.sh  auto-fix-workflow-v3.sh  auto-fix-workflow.sh  benchmark-boringssl.sh  build-boringssl.sh  build-hysteria2.sh  build-log-checker.sh  build-openssl-full.sh  build-xray.sh  download-debug-files.ps1  download-debug-files.sh  hyper-auto-fix-v3.sh  hyper-auto-fix.sh  hyper-log-analyzer.sh  hyper-log-fetcher.sh  hyper-monitor-v2.sh  hyper-monitor-v3.sh  hyper-monitor.sh  log-analyzer.py  logcat-filter.ps1  monitor-workflow-v3.sh  monitor-workflow.sh  quick-check-actions.sh  quick-status.sh  setup-boringssl.sh  setup-rust.sh  test-boringssl-integration.sh  (+3 more)
tools/: check_openssl_link.sh  ci_verify.sh  test_ai_fixer.py
xray-patches/: 001-boringssl-bridge.patch  002-crypto-boringssl-cgo.patch  002-crypto-boringssl-nocgo.patch  002-crypto-boringssl.patch  002-tls-optimization.patch  003-tls-boringssl-cgo.patch  003-tls-boringssl-nocgo.patch  003-tls-boringssl.patch  003-xtls-splice.patch  004-x509-boringssl-cgo.patch  004-x509-boringssl-nocgo.patch  004-x509-boringssl.patch  005-boringssl-tls-bridge.patch  006-tun-setup-logging.patch  006-xray-imports-redirect.patch  007-boringssl-handshake-trace.patch  008-boringssl-runtime-detection.patch  009-aes-gcm-implementation.patch  PATCH_STRATEGY.md  README.md  boringssl_tests.go
(+166 files in other folders)
