[package]
name = "pepper-shaper"
version = "0.1.0"
edition = "2021"

[lib]
name = "pepper_shaper"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21", default-features = false }
ringbuffer = "0.15"
crossbeam = "0.8"
governor = "0.6"
token-bucket = "0.3"
nix = { version = "0.28", features = ["socket"] }
libc = "0.2"
android_logger = "0.13"
log = "0.4"
parking_lot = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

