[package]
name = "perf-net"
version = "0.1.0"
edition = "2021"

[lib]
name = "perf_net"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21", default-features = false }
libc = "0.2"
nix = { version = "0.28", features = ["signal", "socket", "sched"] }
tokio = { version = "1", features = ["full"] }
mio = { version = "1", features = ["os-ext", "os-poll"] }
ring = { version = "0.17", features = ["aws_lc_rs"] }
rustls = "0.23"
deadpool = "0.10"
bb8 = "0.8"
socket2 = { version = "0.5", features = ["all"] }
ringbuffer = "0.15"
crossbeam = "0.8"
quinn = "0.11"
s2n-quic = "1.0"
android_logger = "0.13"
log = "0.4"
parking_lot = "0.12"
num_cpus = "1.16"
rustls-pemfile = "2.0"
webpki = "0.22"
chrono = "0.4"
hashbrown = "0.14"
once_cell = "1.19"
rand = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

