[package]
name = "quiche-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "quiche_client"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21", default-features = false }
quinn = "0.11"
quinn-proto = "0.11"
ring = "0.17"
rustls = "0.23"
tokio = { version = "1", features = ["full", "net", "time", "rt"] }
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.28", features = ["socket", "sched", "fs", "mman"] }
libc = "0.2"
android_logger = "0.13"
log = "0.4"
parking_lot = "0.12"
num_cpus = "1.16"
crossbeam = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"




